# cmake_template

./: CMakeLists.txt  Makefile  README.md
lib/: CMakeLists.txt
src/: CMakeLists.txt  main.cpp
src/modul1/: foo.cpp  foo.h
src/modul2/: CMakeLists.txt  bar.cpp  bar.h
tst/: CMakeLists.txt  test_bar.cpp  test_foo.cpp  test_main.cpp
